🧾 Add XML Docs for `GetEventByGuid` 🔍 Improves clarity by documenting method purpose, parameters, return values, and error scenarios.
---

🚀 feat: Implement Mail Service API with Layered Architecture

Refactors the project into a structured .NET 9 Web API, introduces full email-sending support, and rebrands from **VoidMail** to **Forge**.

### 🔧 Key Changes:

1. **🧱 Architectural Refactor**
   - Organized solution with API (`VoidMail.csproj`) and `Core` library.
   - Introduced `MailService` and `IMailService` in `Core` for clean architecture.
   - Centralized DI in `Core/DependencyInjection.cs`.

2. **📬 Mail API Endpoint**
   - `MailController` with `POST /Mail/send` for email delivery.
   - Includes `EmailDto` for validating `To`, `Subject`, and `HtmlBody`.
   - Uses `Azure.Communication.Email` to send emails.

3. **📦 Standardized Responses**
   - Implements `ApiResponseHelper` for RFC 7807-compliant responses.
   - Unified success & error handling in the controller.

4. **📚 API Documentation & Configuration**
   - Swagger + XML comments for rich docs.
   - Scalar added for dev-friendly API reference UI.
   - Azure Key Vault integrated for secure secrets.
   - Permissive CORS (`AllowAllNoSecurity`) enabled for dev.

5. **⚙️ CI/CD Pipeline**
   - Updated GitHub Actions (`main_voidmail.yml`) to build `VoidMail.sln`.
   - Refined `dotnet publish` and deployment artifacts.
   - Adjusted deploy steps to match new structure.

6. **🔐 Security & Housekeeping**
   - `.gitignore` updated for sensitive files and IDE settings.
   - Added Apache 2.0 `LICENSE`.
   - Updated `README.md` for new project identity and Azure CLI setup.

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,9 @@ CodeCoverage/
 *.VisualState.xml
 TestResult.xml
 nunit-*.xml
+
+# Sensitive Data
+appsettings.Development.json
+appsettings.json
+.idea/.idea.Presentation/.idea/dataSources.xml
+.idea/.idea.Presentation/.idea/sqldialects.xml
