--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ appsettings.Development.json
 appsettings.json
 .idea/.idea.Presentation/.idea/dataSources.xml
 .idea/.idea.Presentation/.idea/sqldialects.xml
+
+.idea/
+.idea
