--- a/.github/workflows/main_voidmail.yml
+++ b/.github/workflows/main_voidmail.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - voidmail
+name: Build and deploy ASP.Net Core app to Azure Web App - VoidMail
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -32,8 +32,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: /publish
+          name: dotnet-app
+          path: ./publish
 
   deploy:
     runs-on: ubuntu-latest
@@ -42,17 +42,19 @@ jobs:
       name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: dotnet-app
+          path: ./publish
 
       - name: Login to Azure
         uses: azure/login@v2
+
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_82C404AC57AA4D5B9CA478066A9C01DA }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_4F5A5881E02F4815A6B2AB300AF820F1 }}
@@ -62,6 +64,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "voidmail"
+          app-name: "VoidMail"
           slot-name: "Production"
           package: ./publish
